@@ -35,6 +35,7 @@ Version 7.44 - not yet released
 * devices
   - Add driver for Condor 3
   - Add driver for LX Navigation Eos / Era variometers
+  - Flarm: parse flarm error messages (PFLAE) and display them
 
 Version 7.43 - 2024-08-12
 * calculations
